--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -42,7 +42,7 @@
                     <i class="fas fa-tags"></i>
                     <span>Coupons</span>
                 </a>
-                <a href="/admin/sales" class="nav-item">
+                <a href="/admin/salesreport" class="nav-item">
                     <i class="fas fa-chart-line"></i>
                     <span>Sales</span>
                 </a>
